[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/InGame/InGameNetwork.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainMenu/HeaderSection.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/skull.png" type="Texture" id=3]
[ext_resource path="res://assets/images/target_person.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Anonymous_Pro.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/pistol_ammo.png" type="Texture" id=7]
[ext_resource path="res://scenes/Popups/StartGamePopup.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Popups/RespawnPopup.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/SoundEffects/EmptyGunShot.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/SoundEffects/GunShot.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/SoundEffects/Reload.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Popups/EndGamePopup.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Popups/WaitForPlayersPopup.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 54
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 54
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 54
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 54
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 6 )

[node name="InGameNoNetwork" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
_sections_unfolded = [ "Material", "Script" ]

[node name="Background" type="ColorRect" parent="."]
margin_right = 540.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 1 )

[node name="HeaderSection" parent="." instance=ExtResource( 2 )]

[node name="MainSection" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 99.0
margin_right = 530.0
margin_bottom = 619.0
color = Color( 0.580392, 0.517647, 0.231373, 1 )

[node name="skull" type="Sprite" parent="MainSection"]
modulate = Color( 0.364706, 0.364706, 0.364706, 1 )
position = Vector2( 462, 460 )
texture = ExtResource( 3 )

[node name="target_person" type="Sprite" parent="MainSection"]
position = Vector2( 60.0001, 466 )
scale = Vector2( 0.991803, 0.890625 )
texture = ExtResource( 4 )

[node name="Deaths" type="Label" parent="MainSection"]
margin_left = 417.0
margin_top = 434.0
margin_right = 505.0
margin_bottom = 509.0
custom_fonts/font = SubResource( 1 )
text = "00"

[node name="Kills" type="Label" parent="MainSection"]
margin_left = 17.0
margin_top = 431.0
margin_right = 105.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 2 )
text = "00"

[node name="MyTeamScore" type="Label" parent="MainSection"]
visible = false
margin_left = 4.0
margin_right = 92.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "My Team 
Score"

[node name="OtherTeamScore" type="Label" parent="MainSection"]
visible = false
margin_left = 440.0
margin_right = 521.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "Other
Team
Score"

[node name="PlayerNum" type="Label" parent="MainSection"]
margin_left = 160.0
margin_right = 300.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 5 )
text = "Player #"

[node name="TimeRemainingLbl" type="Label" parent="MainSection"]
visible = false
margin_left = 150.0
margin_top = 441.0
margin_right = 370.0
margin_bottom = 474.0
custom_fonts/font = SubResource( 6 )
text = "Time Remaining"
align = 1

[node name="TimeRemaining" type="Label" parent="MainSection"]
visible = false
margin_left = 170.0
margin_top = 461.0
margin_right = 336.0
margin_bottom = 524.0
custom_fonts/font = SubResource( 7 )
text = "00:00"

[node name="AmmoSection" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 629.0
margin_right = 530.0
margin_bottom = 709.0
color = Color( 0.580392, 0.517647, 0.231373, 1 )

[node name="CurrentAmmo" type="Label" parent="AmmoSection"]
margin_right = 119.0
margin_bottom = 67.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 8 )
text = "030"

[node name="Magazine" type="Label" parent="AmmoSection"]
margin_left = 405.0
margin_right = 520.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 9 )
text = "030"

[node name="AmmoBar" type="ProgressBar" parent="AmmoSection"]
margin_left = 120.0
margin_top = 8.0
margin_right = 390.0
margin_bottom = 48.0
max_value = 30.0
step = 1.0
value = 20.0
percent_visible = false

[node name="pistol_ammo" type="Sprite" parent="AmmoSection/AmmoBar"]
position = Vector2( 134, 20 )
scale = Vector2( 0.3, 0.324786 )
texture = ExtResource( 7 )

[node name="ShotMode" type="Label" parent="AmmoSection"]
margin_left = -1.0
margin_top = 50.0
margin_right = 518.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 10 )
text = "Shot Mode: Semi-Auto"
align = 1

[node name="HealthSection" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 718.0
margin_right = 530.0
margin_bottom = 798.0
color = Color( 0.580392, 0.517647, 0.231373, 1 )

[node name="HealthBar" type="ProgressBar" parent="HealthSection"]
margin_left = 123.0
margin_top = 30.0
margin_right = 393.0
margin_bottom = 75.0
max_value = 20.0
step = 1.0
value = 15.0
percent_visible = false

[node name="CurrentHealth" type="Label" parent="HealthSection"]
margin_top = 20.0
margin_right = 119.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 11 )
text = "020"

[node name="FullHealth" type="Label" parent="HealthSection"]
margin_left = 399.0
margin_top = 19.0
margin_right = 518.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 12 )
text = "020"

[node name="Recoil" type="Label" parent="HealthSection"]
margin_left = 135.0
margin_top = -3.0
margin_right = 388.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 13 )
text = "Recoil: Enabled"

[node name="StatusSection" type="ColorRect" parent="."]
margin_left = 9.0
margin_top = 810.0
margin_right = 530.0
margin_bottom = 890.0
color = Color( 0.580392, 0.517647, 0.231373, 1 )

[node name="StatusMessages" type="RichTextLabel" parent="StatusSection"]
margin_top = 1.0
margin_right = 519.0
margin_bottom = 78.0
custom_fonts/normal_font = SubResource( 14 )
text = "Initialized."

[node name="HitIndicatorTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="RemainingGameTimer" type="Timer" parent="."]
one_shot = true

[node name="StartGamePopup" parent="." instance=ExtResource( 8 )]

[node name="RespawnPopup" parent="." instance=ExtResource( 9 )]
visible = false

[node name="EmptyGunShot" parent="." instance=ExtResource( 10 )]

[node name="GunShot" parent="." instance=ExtResource( 11 )]

[node name="Reload" parent="." instance=ExtResource( 12 )]

[node name="EndGamePopup" parent="." instance=ExtResource( 13 )]
visible = false

[node name="WaitForPlayersPopup" parent="." instance=ExtResource( 14 )]
visible = false
[connection signal="timeout" from="HitIndicatorTimer" to="." method="_on_HitIndicatorTimer_timeout" flags=3]
